# City_Bus

./: .gitignore  CMakeLists.txt  RAPORT.md  README.md  common.h  dispatcher.c
include/: common.h  config.h  ipc.h  logging.h
src/: dispatcher.c  driver.c  ipc.c  logging.c  main.c  passenger.c  ticket_office.c
